
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-rdf-memory"
version = "0.1.0"
description = "RDF triple store backend for MCP memory"
readme = "README.md"
authors = [
    { name = "Omegaice", email = "950526+Omegaice@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.5.1",
    "pydantic>=2.11.5",
    "pyoxigraph>=0.4.10",
]

[project.scripts]
mcp-rdf-memory = "mcp_rdf_memory.__main__:main"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "docs"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.11.6",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]
docs = [
    
]
test = [
    "pytest>=8.3.5",
    "pytest-icdiff>=0.9",
    "pytest-sugar>=1.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --verbose"
testpaths = ["tests"]


[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".direnv",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
    "NPY", # numpy
    "PERF",# performance
    "RUF", # ruff-specific rules
]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
show_error_codes = true
pretty = true
plugins = []
exclude = "tests/.*"
